--- a/app/src/main/res/layout/record_fragment.xml
+++ b/app/src/main/res/layout/record_fragment.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".fragment.RecordFragment">
 
-    <TextView
+    <com.example.gy.musicgame.view.TitleView
+        android:id="@+id/navigation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="record" />
-
-</FrameLayout>
+        android:layout_height="wrap_content"
+        app:showBack="false"
+        app:showRight="false"
+        app:title="@string/bottom_record" />
+</LinearLayout>
