--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#FFFFFF</color>
     <color name="normal">#707070</color>
     <color name="pressed">#d81e06</color>
+    <color name="splash_top_color">#FAFAFA</color>
 </resources>
