--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,4 +4,5 @@
     <dimen name="marginSize">16dp</dimen>
     <dimen name="navTitleSize">22sp</dimen>
     <dimen name="itemWidth">4dp</dimen>
+    <dimen name="icon_height">25dp</dimen>
 </resources>
