--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,24 +25,31 @@
         android:id="@+id/et_user"
         android:layout_width="match_parent"
         android:layout_height="@dimen/btn_height"
+        android:layout_marginStart="@dimen/btn_margin"
+        android:layout_marginLeft="@dimen/btn_margin"
         android:layout_marginTop="20dp"
-        android:background="@color/white"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:cursorVisible="true"
+        android:focusable="true"
         android:hint="@string/user"
         android:inputType="text"
-        android:paddingStart="20dp"
-        android:paddingLeft="20dp"
+        android:textColorHint="@color/hint_color"
+        android:theme="@style/customEditText"
         tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/btn_height"
+        android:layout_marginStart="@dimen/btn_margin"
+        android:layout_marginLeft="@dimen/btn_margin"
         android:layout_marginTop="20dp"
-        android:background="@color/white"
+        android:layout_marginEnd="@dimen/btn_margin"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:paddingStart="20dp"
-        android:paddingLeft="20dp"
+        android:textColorHint="@color/hint_color"
+        android:theme="@style/customEditText"
         tools:ignore="RtlSymmetry" />
 
     <TextView
