--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         app:showRight="false"
         app:title="@string/register" />
 
-    <EditText
+    <com.example.gy.musicgame.view.ClearEditText
         android:id="@+id/et_user"
         android:layout_width="match_parent"
         android:layout_height="@dimen/btn_height"
@@ -22,13 +22,11 @@
         android:layout_marginEnd="@dimen/btn_margin"
         android:hint="@string/user"
         android:inputType="text"
-        android:paddingStart="15dp"
-        android:paddingLeft="15dp"
         android:textColorHint="@color/hint_color"
         android:theme="@style/customEditText"
         tools:ignore="RtlSymmetry" />
 
-    <EditText
+    <com.example.gy.musicgame.view.ClearEditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/btn_height"
@@ -37,13 +35,11 @@
         android:layout_marginEnd="@dimen/btn_margin"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:paddingStart="15dp"
-        android:paddingLeft="15dp"
         android:textColorHint="@color/hint_color"
         android:theme="@style/customEditText"
         tools:ignore="RtlSymmetry" />
 
-    <EditText
+    <com.example.gy.musicgame.view.ClearEditText
         android:id="@+id/et_sure_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/btn_height"
@@ -52,8 +48,6 @@
         android:layout_marginEnd="@dimen/btn_margin"
         android:hint="@string/sure_password"
         android:inputType="textPassword"
-        android:paddingStart="15dp"
-        android:paddingLeft="15dp"
         android:textColorHint="@color/hint_color"
         android:theme="@style/customEditText"
         tools:ignore="RtlSymmetry" />
