--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="50dp"
         android:src="@mipmap/logo" />
 
-    <EditText
+    <com.example.gy.musicgame.view.ClearEditText
         android:id="@+id/et_user"
         android:layout_width="match_parent"
         android:layout_height="@dimen/btn_height"
@@ -31,14 +31,13 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:cursorVisible="true"
-        android:focusable="true"
         android:hint="@string/user"
         android:inputType="text"
         android:textColorHint="@color/hint_color"
         android:theme="@style/customEditText"
         tools:ignore="RtlSymmetry" />
 
-    <EditText
+    <com.example.gy.musicgame.view.ClearEditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/btn_height"
