--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:cursorVisible="true"
-        android:hint="@string/user"
+        android:hint="@string/user_or_mobile"
         android:inputType="text"
         android:textColorHint="@color/hint_color"
         android:theme="@style/customEditText"
