--- a/app/src/main/res/layout/record_fragment.xml
+++ b/app/src/main/res/layout/record_fragment.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".fragment.RecordFragment">
 
-    <com.example.gy.musicgame.view.TitleView
-        android:id="@+id/navigation"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:showBack="false"
-        app:showRight="false"
-        app:title="@string/bottom_record" />
-</LinearLayout>
+        android:orientation="vertical">
+
+        <com.example.gy.musicgame.view.TitleView
+            android:id="@+id/navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:showBack="false"
+            app:showRight="false"
+            app:title="@string/bottom_record" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom">
+
+        <com.example.gy.musicgame.view.BottomBarView
+            android:layout_width="match_parent"
+            android:layout_height="60dp" />
+    </LinearLayout>
+</FrameLayout>
