--- a/app/src/main/res/layout/bottom_bar.xml
+++ b/app/src/main/res/layout/bottom_bar.xml
@@ -3,15 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_bottom_bar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
     android:background="@color/white"
     android:orientation="horizontal"
+    android:layout_gravity="bottom"
     android:padding="6dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/btn_height"
+        android:layout_height="@dimen/btn_height"
         android:src="@mipmap/logo" />
 
     <LinearLayout
@@ -29,7 +30,7 @@
             android:layout_height="wrap_content"
             android:text="歌曲的名称"
             android:textColor="#888888"
-            android:textSize="18sp"
+            android:textSize="@dimen/btn_size"
             tools:ignore="HardcodedText" />
 
         <TextView
@@ -45,9 +46,19 @@
 
     <ImageView
         android:id="@+id/iv_play"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
         android:layout_gravity="center_vertical"
         android:scaleType="fitXY"
         android:src="@mipmap/play" />
+
+    <ImageView
+        android:id="@+id/iv_next"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/next" />
 </LinearLayout>
