--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -8,4 +8,5 @@
     <dimen name="btn_height">50dp</dimen>
     <dimen name="btn_size">16sp</dimen>
     <dimen name="btn_margin">20dp</dimen>
+    <dimen name="icon_size">30dp</dimen>
 </resources>
