--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -9,4 +9,5 @@
     <dimen name="btn_size">16sp</dimen>
     <dimen name="btn_margin">20dp</dimen>
     <dimen name="icon_size">30dp</dimen>
+    <dimen name="item_size">80dp</dimen>
 </resources>
