--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="transparent">@android:color/transparent</color>
     <color name="bottom_color">#F5B4F5</color>
     <color name="hint_color">#C7C7C7</color>
+    <color name="dark_transparent">#24000000</color>
 </resources>
