--- a/app/src/main/res/layout/me_fragment.xml
+++ b/app/src/main/res/layout/me_fragment.xml
@@ -176,10 +176,12 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/btn_margin"
                 android:drawableTop="@mipmap/empty"
+                android:drawablePadding="6dp"
+                android:gravity="center"
                 android:text="@string/data_empty" />
         </LinearLayout>
 
