--- a/app/src/main/res/layout/friend_fragment.xml
+++ b/app/src/main/res/layout/friend_fragment.xml
@@ -17,8 +17,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:showBack="false"
-            app:showRight="false"
+            app:srcRight="@mipmap/add_white"
             app:title="@string/bottom_friend" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <com.example.gy.musicgame.friend.SideBar
+                android:id="@+id/side_bar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:paddingEnd="10dp"
+                android:paddingRight="10dp"
+                android:textColor="@color/pressed"
+                android:textSize="15sp"
+                tools:ignore="RtlSymmetry" />
+        </RelativeLayout>
     </LinearLayout>
 
     <LinearLayout
