--- a/app/src/main/res/layout/friend_item.xml
+++ b/app/src/main/res/layout/friend_item.xml
@@ -20,6 +20,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/iv_image"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_gravity="center"
