--- a/app/src/main/res/layout/me_fragment.xml
+++ b/app/src/main/res/layout/me_fragment.xml
@@ -193,6 +193,7 @@
         android:gravity="bottom">
 
         <com.example.gy.musicgame.view.BottomBarView
+            android:id="@+id/bottom_bar_view"
             android:layout_width="match_parent"
             android:layout_height="60dp" />
     </LinearLayout>
