--- a/app/src/main/res/layout/friend_fragment.xml
+++ b/app/src/main/res/layout/friend_fragment.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <com.example.gy.musicgame.view.TitleView
-            android:id="@+id/navigation"
+            android:id="@+id/titleView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:showBack="false"
@@ -22,10 +22,8 @@
 
 
         <RelativeLayout
-            android:id="@+id/rl_data"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="visible">
+            android:layout_height="match_parent">
 
             <ListView
                 android:id="@+id/listView"
